modificaciones titulo codec

--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
                     <div class="container-large">
                         <div>
                             <div data-w-id="ef0eeb61-4441-00c1-68d2-849b4bae3bc4" class="home-header-component">
-                                <div class="margin-bottom margin-xhuge">
-                                    <div class="text-align-center">
-                                        <div class="max-width-large">
-                                            <div class="margin-bottom margin-xsmall">
+                                <div class="margin-bottom margin-xhuge w-100">
+                                    <div class="text-align-center w-100">
+                                        <div class="">
+                                            <div class="margin-bottom margin-xsmall header-titulo-mov">
                                                 <div class="subheading">Congreso Dental Chihuahuense </div>
                                             </div>
                                             <div class="margin-bottom margin-small my-5">
-                                                <h1 class="my-3">CODEC</h1>
+                                                <h1 class="codec-titulo">CODEC</h1>
                                             </div>
-                                            <div class="header-infos-wrapper">
+                                            <div class="header-infos-wrapper justify-content-md-between mt-5">
                                                 <div class="header-infos-item">
                                                     <div>3 y 4 de Octubre 2024</div>
                                                 </div>
@@ -301,18 +301,17 @@
                                                 <div class="heading-style-h4">Dr. Manuel Lujan</div>
                                                 <div class="text-size-medium"> Cirujano Dentista</div>
                                                 <div class="speaker-bio-content">
-                                                    <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
-                                                        cirujano dentista especializado en prostodoncia, graduado de la
-                                                        UNAM
-                                                        en 1995 y con especialidad en el Centro Dental Eastman de la
-                                                        Universidad de Rochester. Desde 2002, mantiene una
-                                                        práctica privada en prostodoncia y es miembro activo de la
-                                                        Asociación Dental Mexicana, el American Prosthodontist Society
-                                                        (Vicepresidente), y el International College of Dentist.
-                                                        Ha sido presidente del Consejo Mexicano de Rehabilitación Oral y
-                                                        Maxilofacial a.c. y participa en la Asociación Unidos por la
-                                                        Prostodoncia. Además, es profesor de posgrado en la UNAM y
-                                                        conferencista a nivel nacional e internacional.</p>
+                                                    <p class="text-bio">Manuel Antonio Luján Aguilar es un cirujano
+                                                        dentista especializado en prostodoncia con una maestría en
+                                                        estomatología. Graduado de la Universidad Autónoma de Chihuahua
+                                                        y la Universidad de Guadalajara, cuenta con una sólida formación
+                                                        académica y ha asistido a numerosos cursos y seminarios
+                                                        internacionales. Con más de 20 años de experiencia, combina su
+                                                        práctica privada con la docencia en la Universidad Autónoma de
+                                                        Chihuahua, donde coordina la academia de prostodoncia. Ha
+                                                        participado en diversas investigaciones y publicaciones
+                                                        científicas, destacándose en la rehabilitación protésica e
+                                                        implantología.</p>
                                                 </div>
                                                 <div class="redes-c">
 
@@ -353,8 +352,8 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="./assets/placeholder.jpg"
-                                                    loading="lazy" alt="Sarah Lee" class="speaker-image img-fluid" />
+                                                <img src="./assets/placeholder.jpg" loading="lazy" alt="Sarah Lee"
+                                                    class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
                                                 <div class="heading-style-h4">Dr. Heber Roberto León Salazar</div>
@@ -383,8 +382,8 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="./assets/placeholder.jpg"
-                                                    loading="lazy" alt="Dr. Floriberto Calixto Arellanos"
+                                                <img src="./assets/placeholder.jpg" loading="lazy"
+                                                    alt="Dr. Floriberto Calixto Arellanos"
                                                     class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
@@ -414,26 +413,20 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="./assets/placeholder.jpg"
-                                                    loading="lazy" alt="Dr. Cristian Reyna"
-                                                    class="speaker-image img-fluid" />
+                                                <img src="./assets/placeholder.jpg" loading="lazy"
+                                                    alt="Dr. Fermin Ocañas" class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
-                                                <div class="heading-style-h4">Dr. Cristian Reyna</div>
+                                                <div class="heading-style-h4">Dr. Fermin Ocañas</div>
                                                 <div class="text-size-medium">Titulo</div>
                                                 <div class="speaker-bio-content">
-                                                    <p class="text-bio">Dr. Néstor Schejtman Plotnik es un
-                                                        cirujano dentista especializado en prostodoncia, graduado de la
-                                                        UNAM
-                                                        en 1995 y con especialidad en el Centro Dental Eastman de la
-                                                        Universidad de Rochester. Desde 2002, mantiene una
-                                                        práctica privada en prostodoncia y es miembro activo de la
-                                                        Asociación Dental Mexicana, el American Prosthodontist Society
-                                                        (Vicepresidente), y el International College of Dentist.
-                                                        Ha sido presidente del Consejo Mexicano de Rehabilitación Oral y
-                                                        Maxilofacial a.c. y participa en la Asociación Unidos por la
-                                                        Prostodoncia. Además, es profesor de posgrado en la UNAM y
-                                                        conferencista a nivel nacional e internacional.</p>
+                                                    <p class="text-bio">Lorem ipsum, dolor sit amet consectetur
+                                                        adipisicing elit. Consequuntur ut quibusdam minima, quae aliquam
+                                                        explicabo aspernatur, ducimus ullam repellendus incidunt unde
+                                                        numquam fuga vero farnatur, ducimus ullam repellendus incidunt
+                                                        unde
+                                                        numquam fuga vero fcilis. Perferendis earum ipsa debitis
+                                                        eveniet?</p>
                                                 </div>
                                                 <div class="redes-c">
 
@@ -558,7 +551,7 @@
                                         <div id="w-node-e43f4d9d-549f-2a50-8a36-32b01124765e-3863c98b"
                                             class="agenda-content">
                                             <div class="margin-bottom margin-xsmall">
-                                                <h3>Receso</h3>
+                                                <h3>Receso / Carteles</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -590,7 +583,7 @@
                                     <div data-w-id="49babfcc-9d07-d8c3-63f5-1107f8f9a7eb" class="agenda-item">
                                         <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ec-3863c98b"
                                             class="agenda-time">
-                                            <div> 15:00 - 18:30 pm</div>
+                                            <div> 15:00 - 16:30 pm</div>
                                         </div>
                                         <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ef-3863c98b"
                                             class="agenda-content">
@@ -603,7 +596,7 @@
                                     <div data-w-id="7b699b8b-95d7-42bd-c521-b9c1d63011ab" class="agenda-item">
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011ac-3863c98b"
                                             class="agenda-time">
-                                            <div> 15:30 - 16:00 pm</div>
+                                            <div> 16:30 - 17:00 pm</div>
                                         </div>
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                             class="agenda-content">
@@ -615,7 +608,7 @@
                                     <div data-w-id="49babfcc-9d07-d8c3-63f5-1107f8f9a7eb" class="agenda-item">
                                         <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ec-3863c98b"
                                             class="agenda-time">
-                                            <div> 16:00 - 18:00 pm</div>
+                                            <div> 17:00 - 18:30 pm</div>
                                         </div>
                                         <div id="w-node-_49babfcc-9d07-d8c3-63f5-1107f8f9a7ef-3863c98b"
                                             class="agenda-content">
@@ -626,18 +619,7 @@
                                             <p>Conferencista: Dr. Floriberto Calixto Arellanos</p>
                                         </div>
                                     </div>
-                                    <div data-w-id="e76cb932-36d5-1daa-65da-f00d3ca37b09" class="agenda-item">
-                                        <div id="w-node-e76cb932-36d5-1daa-65da-f00d3ca37b0a-3863c98b"
-                                            class="agenda-time">
-                                            <div>18:00 pm</div>
-                                        </div>
-                                        <div id="w-node-e76cb932-36d5-1daa-65da-f00d3ca37b0d-3863c98b"
-                                            class="agenda-content">
-                                            <div class="margin-bottom margin-xsmall">
-                                                <h3>Cierre / Rifa</h3>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                     <div class="agenda-item">
                                         <div id="w-node-e76cb932-36d5-1daa-65da-f00d3ca37b0a-3863c98b"
                                             class="agenda-time">
@@ -713,7 +695,7 @@
                                             <p>Conferencista: Dr. Oscar Vizcarra</p>
                                         </div>
                                     </div>
-                                    
+
                                     <div data-w-id="7b699b8b-95d7-42bd-c521-b9c1d63011ab" class="agenda-item">
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011ac-3863c98b"
                                             class="agenda-time">
@@ -746,9 +728,9 @@
                                         <div id="w-node-_7b699b8b-95d7-42bd-c521-b9c1d63011af-3863c98b"
                                             class="agenda-content">
                                             <div class="margin-bottom margin-xsmall">
-                                                <h3 id="location">Clausura /  Decisión de Jurado de Carteles</h3>
+                                                <h3 id="location">Clausura / Decisión de Jurado de Carteles</h3>
                                             </div>
-                                        </div>  
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -1089,24 +1071,24 @@
                                 <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8c96-547d8c7d"
                                     class="w-layout-grid footer-social-list">
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="./assets/facebook.png"
-                                            loading="lazy" alt="Facebook Icon" class="icon-1x1-small" />
+                                        <img src="./assets/facebook.png" loading="lazy" alt="Facebook Icon"
+                                            class="icon-1x1-small" />
                                     </a>
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="./assets/instagram.png"
-                                            loading="lazy" alt="Instagram Icon" class="icon-1x1-small" />
+                                        <img src="./assets/instagram.png" loading="lazy" alt="Instagram Icon"
+                                            class="icon-1x1-small" />
                                     </a>
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="./assets/linkedin.png"
-                                            loading="lazy" alt="Linkedin Icon" class="icon-1x1-small" />
+                                        <img src="./assets/linkedin.png" loading="lazy" alt="Linkedin Icon"
+                                            class="icon-1x1-small" />
                                     </a>
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="./assets/twitter.png"
-                                            loading="lazy" alt="Twitter Icon" class="icon-1x1-small" />
+                                        <img src="./assets/twitter.png" loading="lazy" alt="Twitter Icon"
+                                            class="icon-1x1-small" />
                                     </a>
                                     <a href="#" class="footer-social-link w-inline-block">
-                                        <img src="./assets/youtube.png"
-                                            loading="lazy" alt="Youtube Icon" class="icon-1x1-small" />
+                                        <img src="./assets/youtube.png" loading="lazy" alt="Youtube Icon"
+                                            class="icon-1x1-small" />
                                     </a>
                                 </div>
                             </div>
