--- a/index.html
+++ b/index.html
@@ -43,23 +43,27 @@
     </style>
 
     <style>
-        .radio{
+        .radio {
             display: block;
-            cursor: pointer; 
-            user-select:none;
+            cursor: pointer;
+            user-select: none;
             text-align: left;
-            &+.radio{
+
+            &+.radio {
                 margin-top: 12px;
             }
-            input{
+
+            input {
                 display: none;
-                &+span{
-                    display: inline-block; 
+
+                &+span {
+                    display: inline-block;
                     position: relative;
                     padding-left: 30px;
                     content: '';
-                    &:before{
-                        display: block; 
+
+                    &:before {
+                        display: block;
                         position: absolute;
                         top: 0px;
                         left: 0px;
@@ -70,9 +74,10 @@
                         border: 1px solid #ccc;
                         background: #fff;
                     }
-                    &:after{
+
+                    &:after {
                         content: '';
-                        display: block; 
+                        display: block;
                         width: 10px;
                         height: 10px;
                         background: #222;
@@ -81,29 +86,32 @@
                         top: 3px;
                         left: 3px;
                         opacity: 0;
-                        transform: scale(0,0); 
+                        transform: scale(0, 0);
                         transition: all .2s cubic-bezier(0.64, 0.57, 0.67, 1.53);
                     }
                 }
-                &:checked+span:after{
+
+                &:checked+span:after {
                     opacity: 1;
-                    transform: scale(1,1);
+                    transform: scale(1, 1);
                 }
-  }
-}
-/* END CHECKBOX STYLE */
+            }
+        }
+
+        /* END CHECKBOX STYLE */
 
 
-html{
-  min-height: 100%; 
-  background: #fff;
-  box-sizing: border-box;  
-  *,
-  *:before,
-  *:after{
-    box-sizing: border-box;
-  }  
-}
+        html {
+            min-height: 100%;
+            background: #fff;
+            box-sizing: border-box;
+
+            *,
+            *:before,
+            *:after {
+                box-sizing: border-box;
+            }
+        }
     </style>
 </head>
 
@@ -146,13 +154,13 @@ html{
                 let formularioCont = document.querySelector('.overlay')
 
                 navbarCollapse.addEventListener('hidden.bs.collapse', function () {
-                    body.style.paddingTop = '100px'; // Ajusta este valor al alto de tu header
-                    formularioCont.style.paddingTop = "0px";
+                    body.style.paddingTop = '80px'; // Ajusta este valor al alto de tu header
+                    formularioCont.style.paddingTop = "70px";
                 });
 
                 navbarCollapse.addEventListener('shown.bs.collapse', function () {
-                    body.style.paddingTop = '350px'; // 80px (header) + 476px (expanded menu)
-                    formularioCont.style.paddingTop = "370px";
+                    body.style.paddingTop = '310px'; // 80px (header) + 476px (expanded menu)
+                    formularioCont.style.paddingTop = "80px";
                 });
             });
         </script>
@@ -260,31 +268,45 @@ html{
                             <form id="registroForm" class="col-md-8">
                                 <div class="contenedor-inputs">
                                     <div>
-                                        <label for="nombre" class="form-label fw-bold text-align-start">Nombre:</label>
-                                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ej: Pedro" required>
+                                        <label for="nombre"
+                                            class="form-label fw-bold text-align-start fs-6">Nombre:</label>
+                                        <input type="text" class="form-control" name="nombre" id="nombre"
+                                            placeholder="Ej: Pedro" required>
                                     </div>
                                     <div>
-                                        <label for="apellido" class="form-label fw-bold text-align-start">Apellido:</label>
-                                        <input type="text" class="form-control" name="apellido" id="apellido" placeholder="Ej: Lopez" required>
+                                        <label for="apellido"
+                                            class="form-label fw-bold text-align-start fs-6">Apellido:</label>
+                                        <input type="text" class="form-control" name="apellido" id="apellido"
+                                            placeholder="Ej: Lopez" required>
                                     </div>
                                     <div>
-                                        <label for="email" class="form-label fw-bold text-align-start">Email:</label>
-                                        <input required minlength="4" type="email" class="form-control" name="email" id="email" placeholder="Ej: email@domain.com">
+                                        <label for="email"
+                                            class="form-label fw-bold text-align-start fs-6">Email:</label>
+                                        <input required minlength="4" type="email" class="form-control" name="email"
+                                            id="email" placeholder="Ej: email@domain.com">
                                     </div>
                                     <div>
-                                        <label for="telefono" class="form-label fw-bold text-align-start">Teléfono:</label>
-                                        <input required type="tel" id="phone" class="form-control" name="telefono" placeholder="Ej: +52 (123) 456-7890">
+                                        <label for="telefono"
+                                            class="form-label fw-bold text-align-start fs-6">Teléfono:</label>
+                                        <input required type="tel" id="phone" class="form-control" name="telefono"
+                                            placeholder="Ej: +52 (123) 456-7890">
                                     </div>
                                     <div>
-                                        <p class="form-label mt-2 text-align-start">¿Confirma su asistencia al evento rompehielos dentro del itinerario? Es muy importante saber si asistirá, ya que de no confirmar se le negará el acceso durante esa sección del evento. De no saber en que consiste, puede consultar el <a href="#agenda">Itinierario.</a></p>
+                                        <p class="form-label fs-6 mt-2 text-align-start">¿Confirma su asistencia al
+                                            evento
+                                            rompehielos dentro del itinerario? Es muy importante saber si asistirá, ya
+                                            que de no confirmar se le negará el acceso durante esa sección del evento.
+                                            Si no sabe en qué consiste, puede consultar el
+                                            <a class="" href="#agenda">Itinierario.</a>
+                                        </p>
                                         <label class="radio mt-2">
                                             <input name="radio" type="radio" checked>
-                                            <span>Si</span>
-                                          </label>
-                                          <label class="radio">
+                                            <span class="fs-6">Si</span>
+                                        </label>
+                                        <label class="radio">
                                             <input name="radio" type="radio">
-                                            <span>No</span>
-                                          </label>
+                                            <span class="fs-6">No</span>
+                                        </label>
                                     </div>
                                 </div>
                                 <div class="row justify-content-center mt-4">
@@ -307,7 +329,7 @@ html{
                                     });
                                 </script>
                             </form>
-                            
+
                         </div>
                     </div>
                 </div>
