Corrección de imagenes

--- a/index.html
+++ b/index.html
@@ -101,17 +101,7 @@
         /* END CHECKBOX STYLE */
 
 
-        html {
-            min-height: 100%;
-            background: #fff;
-            box-sizing: border-box;
-
-            *,
-            *:before,
-            *:after {
-                box-sizing: border-box;
-            }
-        }
+        
     </style>
 </head>
 
@@ -385,7 +375,7 @@
                                     <div role="listitem" class="speaker-collection-item w-dyn-item">
                                         <div class="speaker-item">
                                             <div class="speaker-image-wrapper">
-                                                <img src="assets/Manuel-Lujan.jpg" loading="lazy" alt="Dr. Manuel Lujan"
+                                                <img src="./assets/Manuel-Lujan.jpg" loading="lazy" alt="Dr. Manuel Lujan"
                                                     class="speaker-image img-fluid" />
                                             </div>
                                             <div class="speaker-content-wrapper">
