modificaciones durante la junta

--- a/index.html
+++ b/index.html
@@ -186,10 +186,6 @@
                                                 </div>
 
                                             </div>
-                                            <div class="margin-top margin-medium">
-                                                <a href="#tickets" class="button w-button btn-abrir-popup">COMPRAR
-                                                    ENTRADA</a>
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -1130,7 +1126,7 @@
                                         <a href="#conferencistas" class="navbar-link w-nav-link">Conferencistas</a>
                                         <a href="#agenda" class="navbar-link w-nav-link">Itinerario</a>
                                         <a href="#info" class="navbar-link w-nav-link">Información</a>
-                                        <a href="#faq" class="navbar-link w-nav-link">Faq</a>
+                                        <a href="#faq" class="navbar-link w-nav-link">FAQs</a>
 
                                     </nav>
                                 </div>
