--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                             del evento. Si no sabe en qué consiste, puede consultar el <a class=""
                                                 href="#agenda">Itinierario.</a></p>
                                         <label class="radio mt-2">
-                                            <input name="asistencia_rompehielos" type="radio" value="si" checked>
+                                            <input name="asistencia_rompehielos" type="radio" value="si">
                                             <span class="fs-6">Si</span>
                                         </label>
                                         <label class="radio">
@@ -295,7 +295,7 @@
                                 </div>
                                 <div class="row justify-content-center mt-4">
                                     <div class="col-md-8">
-                                        <button id="submit" type="submit">
+                                        <button id="submit" type="submit" disabled>
                                             <div class="spinner hidden" id="spinner"></div>
                                             <span id="button-text">Pagar</span>
                                         </button>
