--- a/index.html
+++ b/index.html
@@ -254,20 +254,20 @@
                             <form id="registroForm" class="col-md-8">
                                 <div class="contenedor-inputs">
                                     <div>
-                                        <label for="nombre"
-                                            class="form-label fw-bold text-align-start fs-6">Nombre:</label>
+                                        <label for="nombre" class="form-label fw-bold text-align-start fs-6">Nombre ( *
+                                            ):</label>
                                         <input type="text" class="form-control" name="nombre" id="nombre"
                                             placeholder="Ej: Pedro" required>
                                     </div>
                                     <div>
-                                        <label for="apellido"
-                                            class="form-label fw-bold text-align-start fs-6">Apellido:</label>
+                                        <label for="apellido" class="form-label fw-bold text-align-start fs-6">Apellido
+                                            ( * ):</label>
                                         <input type="text" class="form-control" name="apellido" id="apellido"
                                             placeholder="Ej: Lopez" required>
                                     </div>
                                     <div>
-                                        <label for="email"
-                                            class="form-label fw-bold text-align-start fs-6">Email:</label>
+                                        <label for="email" class="form-label fw-bold text-align-start fs-6">Email ( *
+                                            ):</label>
                                         <input required minlength="4" type="email" class="form-control" name="email"
                                             id="email" placeholder="Ej: email@domain.com">
                                     </div>
@@ -1165,10 +1165,10 @@
                             </div>
                         </div>
                         <div class="footer-bottom-wrapper">
-                            <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">Todos
-                                los derechos reservados</div>
+                            <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca2-547d8c7d" class="footer-credit">
+                                Powered by : </div>
                             <div id="w-node-_7bb6a5d1-d920-daa7-a18a-a375547d8ca4-547d8c7d" class="text-size-small">
-                                Diseñado por:
+                                VEXA
                             </div>
 
 
