cambio en validacion de formulario

--- a/index.html
+++ b/index.html
@@ -272,8 +272,10 @@
                                             id="email" placeholder="Ej: email@domain.com">
                                     </div>
                                     <div>
-                                        <label for="telefono"
-                                            class="form-label fw-bold text-align-start fs-6">Teléfono:</label>
+                                        <label for="telefono" class="form-label fw-bold text-align-start fs-6">Teléfono
+                                            (
+                                            *
+                                            ):</label>
                                         <input required type="tel" id="phone" class="form-control" name="telefono"
                                             placeholder="Ej: +52 (123) 456-7890">
                                     </div>
@@ -291,6 +293,7 @@
                                             <input name="asistencia_rompehielos" type="radio" value="no">
                                             <span class="fs-6">No</span>
                                         </label>
+                                        <div id="asistencia-error"></div>
                                     </div>
                                 </div>
                                 <div class="row justify-content-center mt-4">
@@ -836,15 +839,12 @@
                                                     <h4 class="fs-5">Chihuahua, México</h4>
                                                 </div>
                                                 <p class="text-size-medium">Para llegar al Centro de Exposiciones y
-                                                    Convenciones de Chihuahua en Av. Tecnológico 1900, Santo Niño,
-                                                    Chihuahua, México, desde el Aeropuerto Internacional General Roberto
-                                                    Fierro Villalobos, se puede tomar un coche, con una duración
-                                                    aproximada de 25 minutos, o un autobús, que tarda entre 40 minutos y
-                                                    1 hora. Desde el centro de Chihuahua, en coche se tarda alrededor de
-                                                    15 minutos y en autobús unos 30 minutos. El Centro cuenta con
-                                                    estacionamiento propio y se recomienda revisar las rutas y horarios
-                                                    de autobuses y considerar el tráfico en horas pico para llegar a
-                                                    tiempo.</p>
+                                                    Convenciones de Chihuahua desde el Aeropuerto Internacional General
+                                                    Roberto Fierro Villalobos, se puede tomar un coche (25 min) o un
+                                                    autobús (40-60 min). Desde el centro de Chihuahua, en coche se tarda
+                                                    15 min y en autobús 30 min. El Centro cuenta con estacionamiento y
+                                                    se recomienda revisar rutas, horarios de autobuses y considerar el
+                                                    tráfico en horas pico.</p>
                                             </div>
                                         </div>
 
