--- a/index.html
+++ b/index.html
@@ -836,7 +836,7 @@
                                                 <div class="margin-bottom margin-xsmall">
                                                     <h4 class="heading-style-h5 fs-5">Av. Tecnológico 1900, Santo Niño
                                                     </h4>
-                                                    <h4 class="fs-5">Chihuahua, México</h4>
+                                                    <h4 class="fs-5">Chihuahua, México.</h4>
                                                 </div>
                                                 <p class="text-size-medium">Para llegar al Centro de Exposiciones y
                                                     Convenciones de Chihuahua desde el Aeropuerto Internacional General
